Added basic css file

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>React Todo List</title>
+    <link rel="stylesheet" type="text/css" href="./styles.css">
   </head>
   <body>
     <h1>The Smoothest RPN calculator ever created!</h1>
