--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>React Todo List</title>
     <link rel="stylesheet" type="text/css" href="./styles.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">-->
   </head>
   <body>
     <h1>The Smoothest RPN calculator ever created!</h1>
