Working on alignment of components

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">-->
   </head>
   <body>
-    <h1>The Smoothest RPN calculator ever created!</h1>
+    <h1 class="center">The Smoothest RPN calculator ever created!</h1>
     <div id="app"></div>
     <script src="bundle.js"></script>
   </body>
